# Ising

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  input  template_input.in
include/: Z2.hpp  geometry.hpp  io.hpp  macro.h  parameters.hpp  params.h  random.hpp  spin_conf.h  spin_conf.hpp  timer.hpp
ising_old/: updating.hpp
lib/: geometry.cpp  io.cpp  param.c  random.cpp  simulation.cpp  spin_conf_def.c  spin_conf_def.cpp  spin_conf_meas.c  spin_conf_meas.cpp  spin_conf_upd.c  spin_conf_upd.cpp  upd.cpp
src/: Ising.c  Ising.cpp
